<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_append">Append</string>
    <string name="action_auto_reconnect">Advanced: Auto reconnect if tag gets lost during the key mapping process</string>
    <string name="action_beer_sounds_fine">Beer sounds fine (Donate via Google Play)</string>
    <string name="action_calc_bcc">Calculate BCC</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cancel_all">Cancel Writing</string>
    <string name="action_change">Change</string>
    <string name="action_choose_file">Choose Selected File</string>
    <string name="action_chose_dump">Choose a Dump…</string>
    <string name="action_compare_dump">Compare Dump</string>
    <string name="action_continue">Continue</string>
    <string name="action_create_key_map">Map Keys to Sectors</string>
    <string name="action_create_key_map_and_factory_format">Start Mapping and Format Tag</string>
    <string name="action_create_key_map_and_read">Start Mapping and Read Tag</string>
    <string name="action_create_key_map_and_write_block">Start Mapping and Write Block</string>
    <string name="action_create_key_map_and_write_dump">Start Mapping and Write Dump</string>
    <string name="action_create_key_map_and_write_value_block">Start Mapping and Write Value Block</string>
    <string name="action_create_new_file">Create New File</string>
    <string name="action_data_as_ascii">Data as ASCII</string>
    <string name="action_decode">Decode</string>
    <string name="action_decode_ac">Decode Access Conditions</string>
    <string name="action_decode_manuf_date">Decode date of manufacture</string>
    <string name="action_delete_file">Delete File</string>
    <string name="action_do_not_show_again">Do not show this message again</string>
    <string name="action_dont_save">"Don't Save"</string>
    <string name="action_edit_key_dump">Edit/Add Key File</string>
    <string name="action_edit_tag_dump">Edit/Analyse Dump File</string>
    <string name="action_editor_only">Use App in \"Offline\" Mode</string>
    <string name="action_encode">Encode</string>
    <string name="action_exit_app">Exit App</string>
    <string name="action_factory_format">Factory Format</string>
    <string name="action_help">Help and Info</string>
    <string name="action_i_know_what_i_am_doing">"I know what I'm doing"</string>
    <string name="action_logout">Logout</string>
    <string name="action_more">Read More…</string>
    <string name="action_nfc">Goto NFC Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_open_dump_file">Open Dump File</string>
    <string name="action_open_key_file">Open Key File</string>
    <string name="action_read_all_sectors">Read All Sectors</string>
    <string name="action_read_tag">Read Tag</string>
    <string name="action_remove_duplicates">Remove Duplicates</string>
    <string name="action_replace">Replace</string>
    <string name="action_retry_authentication">Retry the authentication once if it fails</string>
    <string name="action_save">Save</string>
    <string name="action_save_as_default">Save as Default</string>
    <string name="action_save_keys">Save Keys</string>
    <string name="action_save_last_key_files">Remember the last selected key files (key mapping dialog)</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Select None</string>
    <string name="action_settings">Info Pengguna</string>
    <string name="action_share">Share</string>
    <string name="action_show_about">About</string>
    <string name="action_show_ac_tool">Access Condition De-/Encoder</string>
    <string name="action_show_bcc_tool">BCC Calculator</string>
    <string name="action_show_diff_tool">Diff Tool (Compare Dumps)</string>
    <string name="action_show_options">Show Options</string>
    <string name="action_show_preferences">Preferences</string>
    <string name="action_show_tag_info">Display Tag Info</string>
    <string name="action_show_value_blocks_as_int">Value Blocks as Int.</string>
    <string name="action_show_vb_tool">Value Block De-/Encoder</string>
    <string name="action_skip_blocks">Write as Much as Possible</string>
    <string name="action_static_ac">Use these Access Conditions for all sectors:</string>
    <string name="action_tools">Tools</string>
    <string name="action_use_custom_sector_count">Use custom sector count</string>
    <string name="action_use_internal_storage">Save dump and key files to the internal storage</string>
    <string name="action_wirte_block">Write Block</string>
    <string name="action_write_block">Write Block</string>
    <string name="action_write_dump">Write Dump</string>
    <string name="action_write_dump_clone">Write Dump (Clone)</string>
    <string name="action_write_full_dump">Select Dump</string>
    <string name="action_write_mfid">Advanced: Enable writing to manufacturer block</string>
    <string name="action_write_tag">Write Tag</string>
    <string name="action_write_value_block">Write Value Block</string>
    <string name="aino_copyrights">AINO - Copyright 2018</string>
    <string name="allow_camera">This Application Want To Access Camera.</string>
    <string name="allow_location">This Application Want To Access Location.</string>
    <string name="allow_phone">This Application Want To Access Phone.</string>
    <string name="allow_storage">This Application Want To Access External Storage.</string>
    <string name="alpha">Alpha</string>
    <string name="app_name">Presensi Mahasiswa</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attend">Masuk</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="bin_card">Binary</string>
    <string name="bn_card">Block</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="card_type">Jenis Kartu</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="class_out">SSO - Selesai Perkuliahan</string>
    <string name="com.crashlytics.android.build_id">9885aeca-376c-4c1c-a28a-aa0a20fc4782</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="detail">Detail</string>
    <string name="dosen">Dosen</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="jwelcome">Sugeng Rawuh</string>
    <string name="manual">Masuk</string>
    <string name="mhs">Mahasiswa</string>
    <string name="mkl">Mata Kuliah</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="my_account">\u0009\u0009\u0009Presensi Berakhir</string>
    <string name="name">Nama</string>
    <string name="niu">NIU</string>
    <string name="notif">notification</string>
    <string name="password">Password</string>
    <string name="precap">Rekap Presensi</string>
    <string name="sick">Sakit</string>
    <string name="sign_out">Manual Sign Out</string>
    <string name="submit">Submit</string>
    <string name="tap_card">Tempelkan Kartu</string>
    <string name="tap_sign_out">TAP to Sign Out</string>
    <string name="uname">Username</string>
</resources>