<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item n1:id="@id/action_settings" n1:orderInCategory="100" n1:title="@string/action_settings" n2:showAsAction="never"
      xmlns:n1="http://schemas.android.com/apk/res/android" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <item n3:id="@id/action_logout" n3:orderInCategory="100" n3:title="@string/action_logout" n4:showAsAction="never"
      xmlns:n3="http://schemas.android.com/apk/res/android" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <item n5:icon="@drawable/ic_notif" n5:id="@id/notify" n5:title="@string/notif" n6:showAsAction="always"
      xmlns:n5="http://schemas.android.com/apk/res/android" xmlns:n6="http://schemas.android.com/apk/res-auto" />
    <item n7:id="@id/account" n7:title="@string/action_settings" n8:showAsAction="never"
      xmlns:n7="http://schemas.android.com/apk/res/android" xmlns:n8="http://schemas.android.com/apk/res-auto" />
</menu>