<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:gravity="center" n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
        <LinearLayout n1:gravity="center_horizontal" n1:orientation="vertical" n1:background="@color/blue_ugm" n1:layout_width="fill_parent" n1:layout_height="0.0dip" n1:layout_weight="1.0">
            <TextView n1:textSize="@dimen/text_big_title" n1:textStyle="bold" n1:textColor="@color/yellow_ugm" n1:id="@id/title" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/startend_distance" n1:text="@string/jwelcome" />
            <View n1:background="@color/white" n1:layout_width="@dimen/after_button" n1:layout_height="@dimen/space" n1:layout_marginTop="@dimen/space_field" />
            <ImageView n1:id="@id/htb" n1:layout_width="@dimen/nav_drawer_width" n1:layout_height="wrap_content" n1:src="@drawable/htoolbar" />
        </LinearLayout>
        <LinearLayout n1:gravity="center" n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="0.0dip" n1:layout_weight="1.0" />
    </LinearLayout>
    <ImageView n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginBottom="-15.0dip" n1:src="@drawable/ftoolbar" n1:layout_alignParentBottom="true" />
    <LinearLayout n1:orientation="vertical" n1:id="@id/content" n1:background="@drawable/grey_rounded_content" n1:layout_width="fill_parent" n1:layout_height="@dimen/margin_content" n1:layout_marginLeft="@dimen/startend_distance" n1:layout_marginTop="@dimen/margin_content" n1:layout_marginRight="@dimen/startend_distance">
        <Button n1:textColor="@color/blue_ugm" n1:layout_gravity="center" n1:id="@id/btn_submit" n1:background="@drawable/button_bg_rounded_corners" n1:layout_width="@dimen/width_field" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/width_logo_small" n1:layout_marginRight="10.0dip" n1:layout_marginBottom="@dimen/fixed_height_icon" n1:text="@string/tap_card" n1:textAllCaps="false" />
        <Button n1:textColor="@color/white" n1:layout_gravity="center" n1:id="@id/btn_manual" n1:background="@drawable/button_bg_rounded_ugm" n1:layout_width="@dimen/width_field" n1:layout_height="wrap_content" n1:layout_marginRight="10.0dip" n1:layout_marginBottom="@dimen/fixed_height_icon" n1:text="@string/manual" n1:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>