<?xml version="1.0" encoding="utf-8"?>
<ScrollView n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <LinearLayout n1:orientation="horizontal" n1:id="@id/title_bar" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <TextView n1:textAppearance="?android:textAppearanceMedium" n1:textColor="?android:textColorPrimary" n1:ellipsize="end" n1:gravity="center_vertical" n1:id="@id/route_name" n1:layout_width="0.0dip" n1:layout_height="72.0dip" n1:layout_marginLeft="24.0dip" n1:layout_marginRight="24.0dip" n1:singleLine="true" n1:layout_weight="1.0" />
            <ImageButton n1:id="@id/settings" n1:background="?selectableItemBackgroundBorderless" n1:padding="12.0dip" n1:visibility="gone" n1:layout_width="48.0dip" n1:layout_height="48.0dip" n1:layout_marginTop="12.0dip" n1:layout_marginRight="12.0dip" n1:layout_marginBottom="12.0dip" n1:src="?mediaRouteSettingsDrawable" n1:contentDescription="@string/mr_media_route_controller_settings_description" />
        </LinearLayout>
        <FrameLayout n1:id="@id/media_route_control_frame" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <RelativeLayout n1:id="@id/default_control_frame" n1:background="?colorPrimary" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                <ImageView n1:id="@id/art" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:scaleType="centerCrop" n1:adjustViewBounds="true" n1:maxHeight="@dimen/mr_media_route_controller_art_max_height" />
                <ImageButton n1:id="@id/play_pause" n1:background="?selectableItemBackgroundBorderless" n1:padding="12.0dip" n1:layout_width="48.0dip" n1:layout_height="48.0dip" n1:layout_marginTop="8.0dip" n1:layout_marginBottom="8.0dip" n1:layout_below="@id/art" n1:layout_alignParentRight="true" n1:contentDescription="@string/mr_media_route_controller_play" />
                <LinearLayout n1:gravity="center_vertical" n1:orientation="vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="24.0dip" n1:minHeight="64.0dip" n1:layout_toLeftOf="@id/play_pause" n1:layout_below="@id/art" n1:layout_alignParentLeft="true">
                    <TextView n1:textAppearance="?android:textAppearanceSmall" n1:textSize="16.0sp" n1:textStyle="bold" n1:textColor="?android:textColorPrimary" n1:id="@id/title" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:singleLine="true" />
                    <TextView n1:textAppearance="?android:textAppearanceSmall" n1:textSize="14.0sp" n1:textColor="?android:textColorPrimary" n1:id="@id/subtitle" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:singleLine="true" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
        <LinearLayout n1:gravity="center_vertical" n1:id="@id/media_route_volume_layout" n1:padding="8.0dip" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="64.0dip">
            <ImageView n1:gravity="center" n1:layout_width="48.0dip" n1:layout_height="48.0dip" n1:src="?mediaRouteCastDrawable" n1:scaleType="center" />
            <SeekBar n1:id="@id/media_route_volume_slider" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_marginLeft="8.0dip" n1:layout_marginRight="8.0dip" n1:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout n1:orientation="horizontal" n1:id="@id/buttons" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <Button n1:gravity="center" n1:id="@id/disconnect" n1:background="?selectableItemBackgroundBorderless" n1:visibility="gone" n1:layout_width="0.0dip" n1:layout_height="48.0dip" n1:text="@string/mr_media_route_controller_disconnect" n1:layout_weight="1.0" />
            <Button n1:textColor="?colorAccent" n1:gravity="center" n1:id="@id/stop" n1:background="?selectableItemBackgroundBorderless" n1:layout_width="0.0dip" n1:layout_height="48.0dip" n1:text="@string/mr_media_route_controller_stop" n1:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>